--- a/.config
+++ b/.config
@@ -1,8 +1,10 @@
 # 编译x64固件:
 
 CONFIG_TARGET_x86=y
-CONFIG_TARGET_Generic_x86=y
-
+CONFIG_TARGET_x86_generic=y
+CONFIG_HAS_SUBTARGETS=y
+CONFIG_TARGET_BOARD="x86"
+CONFIG_TARGET_SUBTARGET="32"
 # 固件压缩:
 
 CONFIG_TARGET_IMAGES_GZIP=y
