--- a/.config
+++ b/.config
@@ -4,7 +4,9 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_generic=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="x86"
+CONFIG_TARGET_x86_generic_DEVICE_generic=y
 CONFIG_TARGET_SUBTARGET="32"
+​CONFIG_TARGET_ARCH_PACKAGES="x86_generic"
 # 固件压缩:
 
 CONFIG_TARGET_IMAGES_GZIP=y
